# Energy-Aware-Digital-Twin-of-LEO-Satellite-Constellations-Using-Scalable-N-Body-Simulation-

./: .gitignore  COSMOS 2251.txt  IRIDIUM 33.txt  ISS_Zarya Ephemeris-IFT-LLA.csv  README.md  Satellite-ISS_Zarya-To-Satellite-Space_Debris AER.csv  Satellite-ISS_Zarya-To-Satellite-Space_Debris Access.csv  russs.txt
iridium33/debris_folder/: IRIDIUM.txt-1.txt  IRIDIUM.txt-10.txt  IRIDIUM.txt-100.txt  IRIDIUM.txt-101.txt  IRIDIUM.txt-102.txt  IRIDIUM.txt-103.txt  IRIDIUM.txt-104.txt  IRIDIUM.txt-105.txt  IRIDIUM.txt-106.txt  IRIDIUM.txt-107.txt  IRIDIUM.txt-108.txt  IRIDIUM.txt-11.txt  IRIDIUM.txt-12.txt  IRIDIUM.txt-13.txt  IRIDIUM.txt-14.txt  IRIDIUM.txt-15.txt  IRIDIUM.txt-16.txt  IRIDIUM.txt-17.txt  IRIDIUM.txt-18.txt  IRIDIUM.txt-19.txt  IRIDIUM.txt-2.txt  IRIDIUM.txt-20.txt  IRIDIUM.txt-21.txt  IRIDIUM.txt-22.txt  IRIDIUM.txt-23.txt  IRIDIUM.txt-24.txt  IRIDIUM.txt-25.txt  IRIDIUM.txt-26.txt  IRIDIUM.txt-27.txt  IRIDIUM.txt-28.txt  IRIDIUM.txt-29.txt  IRIDIUM.txt-3.txt  IRIDIUM.txt-30.txt  IRIDIUM.txt-31.txt  IRIDIUM.txt-32.txt  IRIDIUM.txt-33.txt  IRIDIUM.txt-34.txt  IRIDIUM.txt-35.txt  IRIDIUM.txt-36.txt  (+69 more)
orbital_sim/: Cargo.toml  tle_dataset.csv
orbital_sim/data/: debris.txt  satellites.txt
orbital_sim/matlab/: breakup_model.m
orbital_sim/src/: main.rs
orbital_sim/src/data/: aer_decoder.rs  ephemeris.rs  mod.rs  tle_parser.rs
orbital_sim/src/renderer/: app.rs  camera.rs  earth.rs  gpu_state.rs  mod.rs  pipeline.rs  ui.rs
orbital_sim/src/simulation/: barnes_hut.rs  body.rs  collision.rs  debris_gen.rs  gnn_predictor.rs  integrator.rs  mod.rs  state.rs
(+1 files in other folders)
